--- a/indexs.html
+++ b/indexs.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http
+    <head>
+        <title>Belajar</title>
+    </head>
+    <body>
+        <p>Hello World!</p>
+        <h>cobadeh</p>
+    </body>
+</html>
