--- a/indexs.html
+++ b/indexs.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="text/css" href="style.css">
         <title>Belajar</title>
     </head>
     <body>
