menambahkan list, pada data admindan style.css

--- a/indexs.html
+++ b/indexs.html
@@ -5,10 +5,11 @@
         <title>Belajar</title>
     </head>
     <body>
-        <p>Hello World!</p>
+        <p>halo pann</p>
         <h>cobadeh</p>
         <ul>
-            <li></li>
+            <li>ipan</li>
+            <li>keren</li>
         </ul>
 
     </body>
