menambah data pelanggan

--- a/indexs.html
+++ b/indexs.html
@@ -5,10 +5,12 @@
         <title>Belajar</title>
     </head>
     <body>
-        <p>Hello World!</p>
+        <p>data pelanggan</p>
         <h>cobadeh</p>
         <ul>
-            <li></li>
+            <li>waluyo</li>
+            <li>aris</li>
+            <li>lyo kyuwo</li>
         </ul>
 
     </body>
